Make console output selectable - allow copy/paste of individual lines

--- a/Code/Frontend/frontend/style.css
+++ b/Code/Frontend/frontend/style.css
@@ -444,6 +444,9 @@ select:focus, input[type="text"]:focus {
   white-space: pre-wrap;
   word-break: break-word;
   line-height: 1.5;
+  user-select: text;
+  -webkit-user-select: text;
+  cursor: text;
 }
 
 #output::-webkit-scrollbar {
